PO-215: Start listening at latest block
