# services/chain-registry/api/chains/patch.go
@@ -6,24 +6,28 @@ import (
 
 	"github.com/gorilla/mux"
 	"gitlab.com/ConsenSys/client/fr/core-stack/orchestrate.git/services/chain-registry/api/utils"
-	models "gitlab.com/ConsenSys/client/fr/core-stack/orchestrate.git/services/chain-registry/store/types"
 	"gitlab.com/ConsenSys/client/fr/core-stack/orchestrate.git/services/multitenancy"
 )
 
 type PatchRequest struct {
-	Name     string    `json:"name,omitempty"`
-	URLs     []string  `json:"urls,omitempty" pg:"urls,array" validate:"unique,dive,url"`
-	Listener *Listener `json:"listener,omitempty"`
+	Name     string                `json:"name,omitempty"`
+	URLs     []string              `json:"urls,omitempty" pg:"urls,array" validate:"unique,dive,url"`
+	Listener *ListenerPatchRequest `json:"listener,omitempty"`
 }
 
-type PatchResponse struct{}
+type ListenerPatchRequest struct {
+	Depth             *uint64 `json:"depth,omitempty"`
+	CurrentBlock      *uint64 `json:"currentBlock,string,omitempty"`
+	BackOffDuration   *string `json:"backOffDuration,omitempty"`
+	ExternalTxEnabled *bool   `json:"externalTxEnabled,omitempty"`
+}
 
 // @Summary Updates a chain by ID
 // @Accept json
 // @Produce json
 // @Param uuid path string true "ID of the chain"
 // @Param request body PatchRequest true "Chain update request"
-// @Success 200 {object} PatchResponse
+// @Success 200 {object} Chain
 // @Failure 400
 // @Failure 404
 // @Failure 500
@@ -31,21 +35,23 @@ type PatchResponse struct{}
 func (h Handler) patchChainByUUID(rw http.ResponseWriter, request *http.Request) {
 	rw.Header().Set("Content-Type", "application/json")
 
-	chainRequest := &PatchRequest{Listener: &Listener{}}
+	chainRequest := &PatchRequest{Listener: &ListenerPatchRequest{}}
 	err := utils.UnmarshalBody(request.Body, chainRequest)
 	if err != nil {
 		utils.WriteError(rw, err.Error(), http.StatusBadRequest)
 		return
 	}
 
-	chain := &models.Chain{
-		UUID:                      mux.Vars(request)["uuid"],
+	uuid := mux.Vars(request)["uuid"]
+
+	chain := &Chain{
+		UUID:                      uuid,
 		Name:                      chainRequest.Name,
 		URLs:                      chainRequest.URLs,
-		ListenerDepth:             chainRequest.Listener.Depth,
-		ListenerBlockPosition:     chainRequest.Listener.BlockPosition,
+		ListenerCurrentBlock:      chainRequest.Listener.CurrentBlock,
 		ListenerBackOffDuration:   chainRequest.Listener.BackOffDuration,
 		ListenerExternalTxEnabled: chainRequest.Listener.ExternalTxEnabled,
+		ListenerDepth:             chainRequest.Listener.Depth,
 	}
 
 	tenantID := multitenancy.TenantIDFromContext(request.Context())
@@ -59,5 +65,11 @@ func (h Handler) patchChainByUUID(rw http.ResponseWriter, request *http.Request)
 		return
 	}
 
-	_ = json.NewEncoder(rw).Encode(&PatchResponse{})
+	chain, err = h.store.GetChainByUUID(request.Context(), uuid)
+	if err != nil {
+		utils.HandleStoreError(rw, err)
+		return
+	}
+
+	_ = json.NewEncoder(rw).Encode(chain)
 }
